--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
+  another_stepper: ^1.2.2
+  # firebase_auth: ^4.19.2
+  # google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
