--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
   another_stepper: ^1.2.2
-  # firebase_auth: ^4.19.2
-  # google_sign_in: ^6.2.1
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.19.2
+  google_sign_in: ^6.2.1
+  provider: ^6.1.2
+  ably_flutter: ^1.2.30
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
