--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>300536682296-mpraecnst2q466d42ke2ao3dlgsokr21.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.300536682296-mpraecnst2q466d42ke2ao3dlgsokr21</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>300536682296-76g7ps5906t68a82o0k1v7of8tdrco9p.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAjyO9VOJ06jOfheynUCkrNzdpwFrkz3C0</string>
 	<key>GCM_SENDER_ID</key>
